fixed popup layout issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -296,6 +296,10 @@
     dark:focus:ring-blue-500
     dark:focus:border-blue-500
   }
+
+  .tw-btn-popup-container {
+    @apply bg-gray-50 dark:bg-dark-mode px-4 py-3 flex flex-row justify-end max-sm:justify-center max-sm:space-x-14 space-x-4
+  }
 }
 
 .button-disabled {
